--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ hr{
     </tr>
   </table>
   <hr>
-  <a href="C:\Users\bhavik\Desktop\bhavik WD\html-personal site\contact.html">Ask a query</a>
+  <a href="contact.html">Ask a query</a>
 </body>
 
 </html>
