--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <label for="Female">Female</label>
   <br><br>
   <label>Query:</label>
-  <input type="<textarea name="name" rows="8" cols="80"></textarea>" name="" value="">
+  <input type="textarea" name="" value="">
   <br><br>
   <input type="submit" name="Send Query" value="Send Query">
   </body>
